// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection render should match snapshot for container 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-container lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={8}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      cont
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for custom icons 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-Icon fake-icon"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={8}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      <Selection.Icon
        key=".0"
      >
        <div
          className="fake-icon"
        />
      </Selection.Icon>
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for danger 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-danger lucid-Selection-no-title"
>
  <MinusCircleIcon
    aspectRatio="xMidYMid meet"
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
    color="primary"
    isClickable={false}
    isDisabled={false}
    onClick={[Function]}
    onSelect={[Function]}
    size={16}
    viewBox="0 0 16 16"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={8}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      cont
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for info 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-info lucid-Selection-no-title"
>
  <InfoIcon
    aspectRatio="xMidYMid meet"
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
    color="primary"
    isClickable={false}
    isDisabled={false}
    onClick={[Function]}
    onSelect={[Function]}
    size={16}
    viewBox="0 0 16 16"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={8}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      cont
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for nested selections 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={8}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      Hello
      <Selection
        hasBackground={false}
        isBold={false}
        isRemovable={true}
        key="[object Object]1"
        kind="default"
        onRemove={[Function]}
        responsiveMode="large"
      >
        There
      </Selection>
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for non removable 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for responsiveMode small 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button lucid-Selection-close-button-is-small"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={16}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      Yolo
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for success 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-success lucid-Selection-no-title"
>
  <SuccessIcon
    aspectRatio="xMidYMid meet"
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
    color="primary"
    isClickable={false}
    isDisabled={false}
    onClick={[Function]}
    onSelect={[Function]}
    size={16}
    viewBox="0 0 16 16"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={8}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      cont
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for warning 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-warning lucid-Selection-no-title"
>
  <WarningIcon
    aspectRatio="xMidYMid meet"
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
    color="primary"
    isClickable={false}
    isDisabled={false}
    onClick={[Function]}
    onSelect={[Function]}
    size={16}
    viewBox="0 0 16 16"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        aspectRatio="xMidYMid meet"
        className="lucid-Selection-close-button"
        color="primary"
        isClickable={true}
        isDisabled={false}
        onClick={[Function]}
        onSelect={[Function]}
        size={8}
        viewBox="0 0 16 16"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      cont
    </div>
  </div>
</div>
`;
